seldon-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: seldon-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
# Use the below commands to install seldon-core.
# helm install seldon-core seldon-core-operator \
#     --repo https://storage.googleapis.com/seldon-charts \
#     --set usageMetrics.enabled=true \
#     --set istio.enabled=true \
#     --namespace seldon-system
